--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
   <div class="my-3 p-3 bg-white rounded shadow-sm" id="About"> 
         <div class="row">
 		    <div class="col-md-5 text-center py-3">
-			   <img src="images/Photo.jpg" class="rounded-circle border mx-auto" style="height:300px; width:300px"/>
+			   <img src="images/Photo.JPG" class="rounded-circle border mx-auto" style="height:300px; width:300px"/>
 			</div>
 			<div class="col-md-7 text-center">
 			    <h2 class="text-uppercase text-center">About me</h2>
