--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                     <div class="col-md-5 order-md-2">
                         <div class="col-sm-12 mx-auto text-center">
                              <h2 class="featurette-heading text-uppercase">Makbuilt Solutions</h2>
-                             <p class="lead">What I did:</p>
+                             <p class="lead">Makbuilt Solutions is a digital marketing company based in Nairobi.<br> What I did:</p>
                              <ul class="list-group">
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                     Search Engine Optimization
@@ -304,7 +304,7 @@
             <div class="col-sm-12 mx-auto text-center">
                 <h2 class="featurette-heading text-uppercase">Silver Harbor</h2>
             <p class="lead">
-              This is website developped for a real estate company in Nairobito showcase their newly constructed appartment.<br> What I did:
+              This is website developped for a real estate company in Nairobi to showcase their newly constructed appartment.<br> What I did:
            </p>
             <ul class="list-group">
                 <li class="list-group-item d-flex justify-content-between align-items-center">
