--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
             <div class="col-sm-12 mx-auto text-center">
                 <h2 class="featurette-heading text-uppercase">Silver Harbor</h2>
             <p class="lead">
-              This website developped for a real estate company in Nairobi to showcase their newly constructed appartment.<br> What I did:
+              This website was developped for a real estate company in Nairobi to showcase their newly constructed appartment.<br> What I did:
            </p>
             <ul class="list-group">
                 <li class="list-group-item d-flex justify-content-between align-items-center">
@@ -342,7 +342,7 @@
                     <div class="col-md-5 order-md-2">
                         <div class="col-sm-12 mx-auto text-center">
                              <h2 class="featurette-heading text-uppercase">Kipekee Fashions Africa</h2>
-                             <p class="lead">This is an online store devloped for a boutique in Nairobi. <br> What I did:</p>
+                             <p class="lead">This is an online store developed for a boutique in Nairobi. <br> What I did:</p>
                              <ul class="list-group">
                                 <li class="list-group-item d-flex justify-content-between align-items-center">
                                    Frontend Development
@@ -423,11 +423,12 @@
 				You know how difficult and hectic it is to turn innovative ideas into finished products, and how so many are stuck out there? Well, as a Full-stack Developer I specialize in demystifying concepts, and implementing them into actual systems efficiently, using modern technologies.<br>
 				If programming was magic, I would be the Wand and you the Bright. If it was a form of communication, I would be a multilingual who speaks Java, Python, C#, PHP, SQL, JavaScript, HTML, etc. I am the brain that makes things happen on a blink of an eye.</p>
 				<address class="text-muted">Tel:<a href="tel:+254712317212" class="text-muted">+254712317212</a><br>Email: <a href="mailto:samtomashikayembi@yahoo.fr" class="text-muted">samtomashikayembi@yahoo.fr</a><br>Nairobi, Kenya</address>
-				
+			
+            <section class="text-center">	
 				<a href="http://linkedin.com/in/samtomashi" class="fa fa-linkedin"></a>
 			<a href="https://github.com/SamTomashi" class="fa fa-github"></a>
             <a href="#" class="fa fa-twitter"></a>
-			<a href="http://www.androidatc.com/_transcript.php" class="fa fa-android"></a>
+			<a href="http://www.androidatc.com/_transcript.php" class="fa fa-android"></a></section>
 			</div>
 		</div>
   </div>
