--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
             <div class="col-sm-12 mx-auto text-center">
                 <h2 class="featurette-heading text-uppercase">Silver Harbor</h2>
             <p class="lead">
-              This website was developped for a real estate company in Nairobi to showcase their newly constructed appartment.<br> What I did:
+              This website was developed for a real estate company in Nairobi to showcase their newly constructed appartment.<br> What I did:
            </p>
             <ul class="list-group">
                 <li class="list-group-item d-flex justify-content-between align-items-center">
