--- a/index.html
+++ b/index.html
@@ -368,8 +368,8 @@
   <hr class="featurette-divider">
  				
 				  <div class="row featurette">
-                    <div class="col-md-5 order-md-2 p-5">
-                        <div class="col-sm-12 mx-auto text-center my-5">
+                    <div class="col-md-5 order-md-2">
+                        <div class="col-sm-12 mx-auto text-center">
                              <h2 class="featurette-heading text-uppercase">Zeyfim</h2>
                              <p class="lead">What I did:</p>
                              <ul class="list-group">
