--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                 </li>
                               
             </ul>
-           	<a target="_blank" href="https://samtomashi.github.io/apps/APK/SalesVisit.apk"  class="onedigital-btn btn btn-flat btn-outline-dark bg-white m-3 my-1 mx-auto rounded">Download the App</a>
+           	<a target="_blank" href="apps/APK/SalesVisit.apk"  class="onedigital-btn btn btn-flat btn-outline-dark bg-white m-3 my-1 mx-auto rounded">Download the App</a>
            </div>
           </div>
           <div class="col-md-7">
@@ -232,7 +232,7 @@
                                  <span class="badge badge-success badge-pill">100%</span>
                 </li>
                             </ul>
-           	                 <a target="_blank" href="https://samtomashi.github.io/apps/APK/OrderApproval.apk"  class="onedigital-btn btn btn-flat btn-outline-dark bg-white m-3 my-1 mx-auto rounded">Download the App</a>
+           	                 <a target="_blank" href="apps/APK/OrderApproval.apk"  class="onedigital-btn btn btn-flat btn-outline-dark bg-white m-3 my-1 mx-auto rounded">Download the App</a>
                         </div>
                     </div>
                     <div class="col-md-7 order-md-1">
