--- a/index.html
+++ b/index.html
@@ -418,13 +418,13 @@
 		    <div class="col-md-5 text-center py-3">
 			   <img src="images/Photo.JPG" class="rounded-circle border mx-auto" style="height:300px; width:300px"/>
 			</div>
-			<div class="col-md-7 text-right">
+			<div class="col-md-7 text-center">
 				<p class="lead">
 				You know how difficult and hectic it is to turn innovative ideas into finished products, and how so many are stuck out there? Well, as a Full-stack Developer I specialize in demystifying concepts, and implementing them into actual systems efficiently, using modern technologies.<br>
 				If programming was magic, I would be the Wand and you the Bright. If it was a form of communication, I would be a multilingual who speaks Java, Python, C#, PHP, SQL, JavaScript, HTML, etc. I am the brain that makes things happen on a blink of an eye.</p>
 				<address class="text-muted">Tel:<a href="tel:+254712317212" class="text-muted">+254712317212</a><br>Email: <a href="mailto:samtomashikayembi@yahoo.fr" class="text-muted">samtomashikayembi@yahoo.fr</a><br>Nairobi, Kenya</address>
 			
-            <section class="text-center">	
+            <section class="">	
 				<a href="http://linkedin.com/in/samtomashi" class="fa fa-linkedin"></a>
 			<a href="https://github.com/SamTomashi" class="fa fa-github"></a>
             <a href="#" class="fa fa-twitter"></a>
