--- a/index.html
+++ b/index.html
@@ -60,13 +60,13 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
-    <ul class="navbar-nav">
+  <div class="navbar-collapse offcanvas-collapse pl-5" id="navbarsExampleDefault">
+    <ul class="navbar-nav ml-5 text-uppercase">
       <li class="nav-item active">
-        <a class="nav-link" href="#Portfolio">Portfolio <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#Portfolio"><small>Portfolio</small> <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#About">About</a>
+       <a class="nav-link" href="#About"><small>About</small></a>
       </li>
       <!-- <li class="nav-item">
         <a class="nav-link" href="#">Contact</a>
