--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="navbar-collapse offcanvas-collapse pl-5" id="navbarsExampleDefault">
-    <ul class="navbar-nav ml-5 text-uppercase">
+  <div class="navbar-collapse offcanvas-collapse pl-lg-5" id="navbarsExampleDefault">
+    <ul class="navbar-nav ml-lg-5 text-uppercase">
       <li class="nav-item active">
         <a class="nav-link" href="#Portfolio"><small>Portfolio</small> <span class="sr-only">(current)</span></a>
       </li>
