Added new APK and mockups images for orderApproval

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
             </div>
           </div>
           <div class="col-md-7">
-            <img class="featurette-image img-fluid" src="images/SalesVisit.jpg" alt="Generic placeholder image"
+            <img class="featurette-image img-fluid" src="images/SalesVisit.webp" alt="Generic placeholder image"
               width="100%" />
           </div>
         </div>
@@ -289,7 +289,7 @@
             </div>
           </div>
           <div class="col-md-7 order-md-1">
-            <img class="featurette-image img-fluid" src="images/Makbuilt.webp" alt="Generic placeholder image"
+            <img class="featurette-image img-fluid" src="images/OrderApproval.webp" alt="Generic placeholder image"
               width="100%" />
           </div>
         </div>
@@ -336,7 +336,7 @@
             </div>
           </div>
           <div class="col-md-7">
-            <img class="featurette-image img-fluid" src="images/Hugoboss.jpg" alt="Generic placeholder image"
+            <img class="featurette-image img-fluid" src="images/Hugoboss.webp" alt="Generic placeholder image"
               width="100%" />
           </div>
         </div>
@@ -555,7 +555,7 @@
             </div>
           </div>
           <div class="col-md-7 order-md-1">
-            <img class="featurette-image img-fluid" src="images/production.jpg" alt="Generic placeholder image"
+            <img class="featurette-image img-fluid" src="images/production.webp" alt="Generic placeholder image"
               width="100%" />
           </div>
         </div>
@@ -578,11 +578,6 @@
         </div>
         <div class="col-md-7 text-center">
           <p class="lead">
-            You know how difficult and hectic it is to turn innovative ideas
-            into finished products, and how so many are stuck out there? Well,
-            as a Full-stack Developer I specialize in demystifying concepts,
-            and implementing them into actual systems efficiently, using
-            modern technologies.<br />
             If programming was magic, I would be the Wand and you the Bright.
             If it was a form of communication, I would be a multilingual who
             speaks Java, Python, C#, PHP, SQL, JavaScript, HTML, etc. I am the
