Removed some projects

--- a/index.html
+++ b/index.html
@@ -355,12 +355,7 @@
                 How I did it:
               </p>
               <ul class="list-group">
-                <!--           <li class="list-group-item d-flex justify-content-between align-items-center">
-                      <label class="float-sm-left text-nowrap">UI/UX Design</label>
-					  <small class="float-sm-right text-right">
-                         <span class="badge badge-success badge-pill">Photoshop</span>
-					</small>
-                </li>-->
+
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                   <label class="float-sm-left text-nowrap">Front-end</label>
                   <small class="float-sm-right text-right">
@@ -401,7 +396,7 @@
         </div>
 
         <!-- START THE FEATURETTES -->
-        <hr class="featurette-divider" />
+       <!-- <hr class="featurette-divider" />
         <div class="row featurette">
           <div class="col-md-5">
             <div class="col-sm-12 mx-auto text-center">
@@ -411,13 +406,7 @@
                 Nairobi to showcase their newly constructed appartment.<br />
                 How I did it:
               </p>
-              <ul class="list-group">
-                <!-- <li class="list-group-item d-flex justify-content-between align-items-center">
-                      <label class="float-sm-left text-nowrap">UI/UX Design</label>
-					  <small class="float-sm-right text-right">
-                         <span class="badge badge-dark badge-pill">Photoshop</span>
-					</small>
-                </li>-->
+
                 <li class="list-group-item d-flex justify-content-between align-items-center">
                   <label class="float-sm-left text-nowrap">Front-end</label>
                   <small class="float-sm-right text-right">
@@ -468,7 +457,6 @@
           </div>
         </div>
 
-        <!-- START THE FEATURETTES -->
         <hr class="featurette-divider" id="wed_design" />
         <div class="row featurette">
           <div class="col-md-5 order-md-2">
@@ -514,7 +502,7 @@
               width="100%" />
           </div>
         </div>
-
+      -->
         <hr class="featurette-divider" />
 
         <div class="row featurette">
