Add clients section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
 
   <!-- Custom styles for this template -->
-  <link href="offcanvas.css" rel="stylesheet" />
+  <link href="css/offcanvas.css" rel="stylesheet" />
+  <link href="css/responsive-clients.css" rel="stylesheet" />
+
 
   <style>
     html {
@@ -76,30 +78,15 @@
         <li class="nav-item">
           <a class="nav-link" href="#About"><small>About</small></a>
         </li>
-        <!-- <li class="nav-item">
-        <a class="nav-link" href="#">Contact</a>
-      </li>
-     <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Settings</a>
-        <div class="dropdown-menu" aria-labelledby="dropdown01">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>-->
+      
       </ul>
-      <!-- <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>-->
+
     </div>
   </nav>
 
   <div class="nav-scroller bg-white shadow-sm">
     <nav class="nav nav-underline text-uppercase">
-      <!-- <a class="nav-link active text-dark">
-	      <span class="align-text-bottom text-dark">  Blog: </span>
-	</a> -->
+
       <a class="nav-link" href="#">
         #<span class="badge badge-pill bg-light align-text-bottom">Python</span>
       </a>
@@ -167,13 +154,36 @@
   </div>
 
   <main role="main" class="container">
-    <!--<div class="d-flex align-items-center p-3 my-3 text-white-50 bg-purple rounded shadow-sm">
-    <img class="mr-3" src="{{ site.baseurl }}/docs/{{ site.docs_version }}/assets/brand/bootstrap-outline.svg" alt="" width="48" height="48">
-    <div class="lh-100">
-      <h6 class="mb-0 text-white lh-100">Bootstrap</h6>
-      <small>Since 2011</small>
-    </div>
-  </div>-->
+
+    <section class="text-center">
+      <h1 class="text-center" style="margin-top: 52px;font-family: Lato, sans-serif;font-weight: 100;">Client Style Gride 2</h1>
+      <p class="text-center" style="margin-bottom: 46px;">Fully Responsive - Rollover to colour - Rollover Tooltip - No Gutters</p>
+      <div class="client-section-2" id="client">
+          <div class="container d-flex justify-content-center client-container">
+              <div class="row g-0 d-flex justify-content-center client-row">
+                  <div class="col-6 col-sm-4 col-md-2 col-lg-2 col-xl-2 d-flex justify-content-center align-items-start no-pad-2">
+                      <div><a class="tooltip-top" href="#" data-tooltip="Computer Pride Ltd"><img class="img-fluid client-image-2" src="images/clients/cpl.png" /></a></div>
+                  </div>
+                  <div class="col-6 col-sm-4 col-md-2 col-lg-2 col-xl-2 d-flex justify-content-center align-items-start no-pad-2">
+                      <div><a href="#" data-tooltip="Dormans The Coffee Expert"><img class="img-fluid client-image-2" src="images/clients/dcl.png" /></a></div>
+                  </div>
+                  <div class="col-6 col-sm-4 col-md-2 col-lg-2 col-xl-2 d-flex justify-content-center align-items-start no-pad-2">
+                      <div><a href="#" data-tooltip="Muthokinju Paint & Cement"><img class="img-fluid client-image-2" src="images/clients/muthokiju.png" /></a></div>
+                  </div>
+                  <div class="col-6 col-sm-4 col-md-2 col-lg-2 col-xl-2 d-flex justify-content-center align-items-start no-pad-2">
+                      <div><a href="#" data-tooltip="Moringa School Ltd"><img class="img-fluid client-image-2" src="images/clients/moringa.png" /></a></div>
+                  </div>
+                  <!-- <div class="col-6 col-sm-4 col-md-2 col-lg-2 col-xl-2 d-flex justify-content-center align-items-start no-pad-2">
+                      <div><a href="#" data-tooltip="Brand Five"><img class="img-fluid client-image-2" src="Slice 1.jpg" /></a></div>
+                  </div>
+                  <div class="col-6 col-sm-4 col-md-2 col-lg-2 col-xl-2 d-flex justify-content-center align-items-start no-pad-2">
+                      <div><a href="#" data-tooltip="Brand Six"><img class="img-fluid client-image-2" src="Slice 10.jpg" /></a></div> -->
+                  </div>
+              </div>
+          </div>
+      </div>
+  </section>
+
 
     <div class="my-3 p-3 bg-white rounded shadow-sm" id="Portfolio">
       <div class="row">
@@ -599,7 +609,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
-  <script src="offcanvas.js"></script>
+  <script src="js/offcanvas.js"></script>
   <script>
     /*$(document).ready(function(){
 // Add smooth scrolling to all links
