added clients anchor

--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
         <li class="nav-item">
           <a class="nav-link" href="#About"><small>About</small></a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#clients"><small>Clients</small></a>
+        </li>
       
       </ul>
 
@@ -155,10 +158,14 @@
 
   <main role="main" class="container">
 
-    <section class="text-center">
-      <h1 class="text-center" style="margin-top: 52px;font-family: Lato, sans-serif;font-weight: 100;">Client Style Gride 2</h1>
-      <p class="text-center" style="margin-bottom: 46px;">Fully Responsive - Rollover to colour - Rollover Tooltip - No Gutters</p>
-      <div class="client-section-2" id="client">
+    <section class="text-center" id="clients">
+      <h1 class="text-uppercase text-primary">Clients</h1>
+          <p class="mx-auto w-100 lead">
+            A list of my happy clients
+          </p>
+      <!-- <h1 class="text-center" style="margin-top: 52px;font-family: Lato, sans-serif;font-weight: 100;">Clients</h1>
+      <p class="text-center" style="margin-bottom: 46px;">Some of my happy clients</p> -->
+      <div class="client-section-2" >
           <div class="container d-flex justify-content-center client-container">
               <div class="row g-0 d-flex justify-content-center client-row">
                   <div class="col-6 col-sm-4 col-md-2 col-lg-2 col-xl-2 d-flex justify-content-center align-items-start no-pad-2">
