--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
   <main role="main" class="container">
 
-    <section class="text-center" id="clients">
+    <div class="my-3 p-3 bg-white rounded shadow-sm text-center" id="clients">
       <h1 class="text-uppercase text-primary">Clients</h1>
           <p class="mx-auto w-100 lead">
             A list of my happy clients
@@ -189,7 +189,7 @@
               </div>
           </div>
       </div>
-  </section>
+    </div>
 
 
     <div class="my-3 p-3 bg-white rounded shadow-sm" id="Portfolio">
